Salesforce/main/default/main/default/objects/OrderItem/fields/Quantidade_da_migo__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_da_migo__c</fullName>
    <label>Quantidade fisica Kg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>