Salesforce/main/default/main/default/objects/OrderItem/fields/Unidade_da_Ordem__c.field-meta.xml
<CustomField>
    <fullName>Unidade_da_Ordem__c</fullName>
    <label>Unidade da Ordem</label>
    <length>40</length>
    <type>Text</type>
</CustomField>