Salesforce/main/default/main/default/objects/OrderItem/validationRules/Accesibilidad.validationRule-meta.xml
<ValidationRule>
    <fullName>Accesibilidad</fullName>
    <active>true</active>
    <description>Gerente LE, Gerente Marketing LE, Markintg solo pueden ver</description>
    <errorConditionFormula>$Profile.Name = &apos;Gerente LE&apos;  ||  $Profile.Name = &apos;Gerente Marketing LE&apos; ||  $Profile.Name = &apos;Marketing&apos;</errorConditionFormula>
    <errorMessage>Unable to edit record</errorMessage>
</ValidationRule>