Salesforce/main/default/main/default/objects/OrderItem/validationRules/No_se_pueden_cambiar_los_pedidos.validationRule-meta.xml
<ValidationRule>
    <fullName>No_se_pueden_cambiar_los_pedidos</fullName>
    <active>true</active>
    <description>Os produtos não podem ser alterados se já estiverem ativos</description>
    <errorConditionFormula>Order.ActivatedById != null</errorConditionFormula>
    <errorMessage>Os produtos não podem ser alterados se já estiverem ativos</errorMessage>
</ValidationRule>