Salesforce/main/default/main/default/objects/OrderItem/validationRules/UnitPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>UnitPrice</fullName>
    <active>true</active>
    <description>Unit price must not be editable</description>
    <errorConditionFormula>ISCHANGED( UnitPrice )</errorConditionFormula>
    <errorMessage>UnitPrice is not editable</errorMessage>
</ValidationRule>